@@ -238,7 +238,7 @@ qqmath.numeric <-
 
 qqmath.formula <-
     function(x,
-             data = parent.frame(),
+             data = NULL,
              allow.multiple = is.null(groups) || outer,
              outer = !is.null(groups),
              distribution = qnorm,
